exports[`test Formatting codes text renders properly 1`] = `
<span
  style={
    Object {
      "fontFamily": "monospace",
    }
  }>
  <span
    style={
      Object {
        "color": undefined,
        "fontStyle": undefined,
        "fontWeight": undefined,
        "textDecoration": undefined,
      }
    }>
    
    <span
      style={
        Object {
          "color": "#aa0000",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      This is red and this is 
    </span>
    <span
      style={
        Object {
          "color": "#aa0000",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      <span>
        NUbipw
      </span>
    </span>
    <span
      style={
        Object {
          "color": undefined,
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
       and 
    </span>
    <span
      style={
        Object {
          "color": undefined,
          "fontStyle": undefined,
          "fontWeight": "bold",
          "textDecoration": undefined,
        }
      }>
      bold. Note that 
    </span>
    <span
      style={
        Object {
          "color": "#5555ff",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      color codes reset format codes, as you 
    </span>
    <span
      style={
        Object {
          "color": "#5555ff",
          "fontStyle": "italic",
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      can see.
    </span>
  </span>
</span>
`;

exports[`test JSON text component renders properly 1`] = `
<span
  style={
    Object {
      "fontFamily": "monospace",
    }
  }>
  <span
    style={
      Object {
        "color": undefined,
        "fontStyle": undefined,
        "fontWeight": undefined,
        "textDecoration": undefined,
      }
    }>
    
    <span
      style={
        Object {
          "color": "#aa0000",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      <span>
        3!#AGNUbipw3!#AGNUbipw3!#AGNUbipw3!#AGNUbipw3
      </span>
    </span>
    <span
      style={
        Object {
          "color": "#55ff55",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
       | 
    </span>
    <span
      style={
        Object {
          "color": "#aa0000",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      SKY-Server 
    </span>
    <span
      style={
        Object {
          "color": "#55ff55",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      | 
    </span>
    <span
      style={
        Object {
          "color": "#aa0000",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      Minigames 
    </span>
    <span
      style={
        Object {
          "color": "#55ff55",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      | 
    </span>
    <span
      style={
        Object {
          "color": "#aa0000",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      Creative 
    </span>
    <span
      style={
        Object {
          "color": "#55ff55",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      | 
    </span>
    <span
      style={
        Object {
          "color": "#ff5555",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      Community von 8 - 66 Jahren 
    </span>
    <span
      style={
        Object {
          "color": "#55ff55",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      | 
    </span>
    <span
      style={
        Object {
          "color": "#aa0000",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      Aktive Admins
    </span>
  </span>
</span>
`;

exports[`test JSON text component with string extra components renders properly 1`] = `
<span
  style={
    Object {
      "fontFamily": "monospace",
    }
  }>
  <span
    style={
      Object {
        "color": undefined,
        "fontStyle": undefined,
        "fontWeight": undefined,
        "textDecoration": undefined,
      }
    }>
    This 
    <span>
      works 
    </span>
    <span
      style={
        Object {
          "color": "#ff5555",
          "fontStyle": undefined,
          "fontWeight": undefined,
          "textDecoration": undefined,
        }
      }>
      great!
    </span>
  </span>
</span>
`;
